tests/errors/compiler/call_not_from_function/call_array.c
int main()
{
	int arr[2] = { 1, 2 };
	int b = 1;
	arr(b);
	return 0;
}
